...
              child: Text(
                t.chat.chatPageController.deleteCurrentButton,
                style: TextStyle(color: Theme.of(context).colorScheme.error),
              ),
            ),
            FilledButton(
              key: const Key('dialog-confirm'),
              onPressed: () =>
                  Navigator.pop(context, NewChatPromptActionEnum.keepCurrent),
              child: Text(t.chat.chatPageController.keepCurrentButton),
            ),
          ],
        ),
...
