...
        TextButton(
          key: const Key('dialog-cancel'),
          onPressed: () => Navigator.pop(context),
          child: Text(widget.cancelText),
        ),
        FilledButton(
          key: const Key('dialog-save'),
          onPressed: () => Navigator.pop(context, _controller!.text.trim()),
          child: Text(widget.confirmText),
        ),
      ],
    );
  }
...
