...
            case _ChatListItemActionEnum.delete:
              onDelete();
          }
        },
        itemBuilder: (context) => [
          PopupMenuItem(
            key: const Key('chat-history-rename'),
            value: _ChatListItemActionEnum.rename,
            child: ListTile(
              leading: const Icon(Icons.edit),
              title: Text(t.chat.chatListItem.renameAction),
            ),
          ),
...
